libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-tuple-path.jsonc
//@ run: fail
//@ description: fn/4 tuple generics with path as argument should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#tuple": [
      "::core::math::add"
      //~^ ERROR expected a simple type parameter name
    ]
  },
  { "#struct": {} },
  "_",
  { "#literal": 0 }
]
